@@ -18,7 +18,7 @@
     <div id="opt-in-prompt">
       <p><strong>setCookie opt-in</strong></p>
       <p>For some sites a necessary cookie has to be set (this cookie doesn't contain any personal information about the user or device):<br><br>
-      Crusoé</p>
+      None</p>
       <p>setCookie opt-in enabled: <span id="opt-in-enabled"></span></p>
       <div id="optin-container">
         <button id="optin-enable">Enable</button>
